--- a/style.css
+++ b/style.css
@@ -6,6 +6,24 @@ body {
     min-height: 100vh;
 }
 
+.container::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to right, #f00, #f00, #0f0, #0ff, #ff0, #0ff);
+    mix-blend-mode: color;
+    pointer-events: none;
+}
+
+video {
+    object-fit: cover;
+    width: 100%;
+    height: 100vh;
+}
+
 h1 {
     position: absolute;
     top: 50%;
@@ -50,13 +68,13 @@ h1 span:nth-child(3) {
 }
 
 h1 span:nth-child(4) {
-    animation-delay: 4s;
+    animation-delay: 3.4s;
 }
 
 h1 span:nth-child(5) {
-    animation-delay: 5s;
+    animation-delay: 3.9s;
 }
 
 h1 span:nth-child(6) {
-    animation-delay: 6s;
+    animation-delay: 4.5s;
 }
